# cpl-coding-0

./: .gitignore  CMakeLists.txt  README.md
1-types-io/: admin  admin-scanf.c  circle.c  scanf-examples.c  scanf-input-1.md
10-struct/: echo-flag.c  echo.c  musician.c  sort.c
11-linkedlist/: CMakeLists.txt  josephus-ll.c  josephus-llist.c
11-linkedlist/ll/: ll.c  ll.h
11-linkedlist/llist/: llist.c
12-networking/: CMakeLists.txt
12-networking/toupper/: uc-client.c  uc-server-accept.c  uc-server-select.c
2-if-for-array/: leap-else-if.c  min-of-two.c
2021-CPL/0-hello/: CMakeLists.txt
2021-CPL/1-types-io/: admin-scanf.c  luo.md  mol.c  printf-examples.c  scanf-examples.c  sphere.c
2021-CPL/10-struct/: echo-flag
2021-CPL/11-linkedlist/llist/: llist.c
2021-CPL/2-if-for-array/: min-of-three.c
2021-CPL/3-for-a-while/: digits.c
2021-CPL/4-loops/: README.md  common.c  game-of-life
2021-CPL/5-function/: CMakeLists.txt  merge.c  palindrome.c  selection-sort.c
2021-CPL/6-recursion/: merge-sort.c  min-re.c
2021-CPL/8-pointer/: strlen.c
2022-CPL/: CMakeLists.txt  README.md
2022-CPL/0-intro/: CMakeLists.txt  guess.c  hello.c
2022-CPL/1-types-io/: CMakeLists.txt  README.md  admin  admin-scanf  admin-scanf.c  admin.c  circle.c  mol.c  sphere  sphere.c
2022-CPL/10-double-pointers/: CMakeLists.txt  README.md  echo-escaped.c  echo.c  game-of-life-pointer.c  integrate.c  selection-sort-strings.c
2022-CPL/11-struct/: README.md  musician.c
2022-CPL/12-linkedlist/: CMakeLists.txt
2022-CPL/12-linkedlist/ll/: ll.c
2022-CPL/13-networking/: CMakeLists.txt
2022-CPL/2-if-for-array/: CMakeLists.txt  README.md  leap-else-if.c  leap-elseif.c  leap-if-else.c  leap.c  min-array-input.c  min-array.c  min-of-three.c  min-of-two-double.c  min-of-two.c
2022-CPL/3-for-a-while/: CMakeLists.txt  README.md  binary-search.c  digits.c  palindrome.c  primes.c  selection-sort  selection-sort.c  stars.c
2022-CPL/4-loops/: CMakeLists.txt  README.md  bubble-sort.c  game-of-life  game-of-life.c
2022-CPL/5-function/: CMakeLists.txt  README.md  binary-search.c  bubble-sort.c  game-of-life  game-of-life.c  guess.c  merge.c  selection-sort.c  stars.c
2022-CPL/6-recursion/: CMakeLists.txt  bsearch-re.c  fib-iter.c  fib-re.c  gcd-euclid-iter.c  gcd-euclid-re.c  gcd-euclidean-iter.c  gcd-euclidean-re.c  mergesort.c  min-re.c  sum-re.c
2022-CPL/7-data-types/: CMakeLists.txt  float-limits.c
2022-CPL/8-pointer/: README.md
2022-CPL/8-pointers/: CMakeLists.txt  README.md  pointer.c  pointers.c  radius.c  selection-sort  selection-sort.c
2022-CPL/8-pointers-arrays/: selection-sort.c
2022-CPL/9-more-pointers/: CMakeLists.txt  README.md  selection-sort-strings.c  strcmp.c  strcpy.c  strlen.c
3-for-a-while/: palindrome.c  selection-sort.c
3-loops/: CMakeLists.txt  README.md  counting  counting-if.c  counting-switch.c  counting.c  prime.c  selection-sort  selection-sort.c
4-loops/: bubble-sort.c
4-loops-continued/: CMakeLists.txt  README.md  bubble-sort.c  counting-switch.c  game-of-life.c
5-function/: CMakeLists.txt  game-of-life.c  leap.c  merge.c  min.c  palindrome.c  prime.c  selection-sort-func  selection-sort.c
6-recursion/: CMakeLists.txt  README.md  fib-array.c  fib-re.c  gcd-euclidean-re.c  gcd-iter.c  gcd-re.c  merge-sort.c  min-re.c
8-pointer/: CMakeLists.txt  README.md  min-max.c  pointer.c  selection-sort.c
9-pointer-more/: README.md  array-pointer.c  selection-sort-strings.c  sort.c  strcmp.c  strcpy.c  strlen.c
CPL-Coding-Template/5-function/: binary-search.c  palindrome.c  primes.c  stars.c
CPL-Coding-Template/8-pointers/: CMakeLists.txt
CPL-Coding-Template/9-more-pointers/: selection-sort-strings.c
cpl-coding-0/: README.md  list
cpl-coding-0/2021-CPL/: CMakeLists.txt
cpl-coding-0/2021-CPL/1-types-io/: CMakeLists.txt  admin-scanf.c  admin.c
cpl-coding-0/2021-CPL/10-struct/: decl.c  echo  sort.c
cpl-coding-0/2021-CPL/11-linkedlist/: README.md
cpl-coding-0/2021-CPL/2-if-for-array/: CMakeLists.txt  leap-elseif.c  leap-if-else.c  min  sum.c
cpl-coding-0/2021-CPL/3-for-a-while/: CMakeLists.txt  README.md
cpl-coding-0/2021-CPL/4-loops/: bubble-sort.c  matrix-mult.c
cpl-coding-0/2021-CPL/5-function/: README.md  binary-search.c  game-of-life  selection-sort.c
cpl-coding-0/2021-CPL/6-recursion/: README.md  bsearch-re.c  fib-iter.c  gcd-euclidean-re.c  sum-re.c
cpl-coding-0/2021-CPL/8-pointer/: min-max  pointer.c  selection-sort  selection-sort.c
cpl-coding-0/2022-CPL/0-intro/: hello.c
cpl-coding-0/2022-CPL/1-types-io/: CMakeLists.txt  circle.c  sphere.c
cpl-coding-0/2022-CPL/10-double-pointers/: decl.c  game-of-life-pointer.c  merge.c  scores.c
cpl-coding-0/2022-CPL/11-struct/: musician.c
cpl-coding-0/2022-CPL/12-linkedlist/: josephus.c
cpl-coding-0/2022-CPL/13-networking/: CMakeLists.txt
cpl-coding-0/2022-CPL/13-networking/intro/: list.c
cpl-coding-0/2022-CPL/13-networking/tcp/: tcp-client  tcp-client.c
cpl-coding-0/2022-CPL/13-networking/timing/: time-server.c
cpl-coding-0/2022-CPL/13-networking/toupper/: toupper-client  toupper-server  toupper-server.c
cpl-coding-0/2022-CPL/2-if-for-array/: CMakeLists.txt  leap-else-if.c  leap-elseif.c  leap-if-else.c  min-array-input.c  min-of-three.c  min-of-two-double.c  min-of-two.c
cpl-coding-0/2022-CPL/3-for-a-while/: CMakeLists.txt  palindrome.c  primes.c
cpl-coding-0/2022-CPL/4-loops/: CMakeLists.txt  README.md
cpl-coding-0/2022-CPL/5-function/: leap.c  merge.c  palindrome.c  primes.c  selection-sort.c
cpl-coding-0/2022-CPL/6-recursion/: fib-array.c  fib-re.c  gcd-euclid-iter.c  gcd-euclidean-iter.c  main-re.c  mergesort.c  sum-re.c
cpl-coding-0/2022-CPL/7-data-types/: CMakeLists.txt
cpl-coding-0/2022-CPL/9-pointers-c-strings/: CMakeLists.txt
cpl-coding-0/CPL-Coding-Template/7-data-types/: CMakeLists.txt
cpl-coding-0/misc/: CMakeLists.txt  array.c
cpl-coding-0/teaching-reports/: README.md
exam/: 2022sep.c  CMakeLists.txt  exam  exam.c
misc/: CMakeLists.txt  realloc.c  scanf-test.c
teaching-reports/: CMakeLists.txt  primes.c
(+6 files in other folders)
