add_executable(2022-selection-sort-strings selection-sort-strings.c)

add_executable(2022-echo echo.c)
add_executable(2022-echo-escaped echo-escaped.c)

add_executable(2022-scores scores.c)
add_executable(2022-game-of-life-pointer game-of-life-pointer.c)

add_executable(2022-merge merge.c)

add_executable(2022-sort sort.c)
add_executable(2022-integrate integrate.c)
target_link_libraries(2022-integrate m)

add_executable(2022-decl decl.c)