add_executable(2022-binary-search-func binary-search.c ../../misc/array.c)
add_executable(2022-bubble-sort-func bubble-sort.c)
add_executable(2022-game-of-life-func game-of-life.c)
add_executable(2022-guess-func guess.c)
add_executable(2022-leap-func leap.c)
add_executable(2022-merge-func merge.c)
add_executable(2022-palindrome-func palindrome.c)
add_executable(2022-primes-func primes.c)
add_executable(2022-selection-sort-func selection-sort.c)
add_executable(2022-stars-func stars.c)