add_executable(2022-main-re main-re.c)

add_executable(2022-min min.c)
add_executable(2022-min-re min-re.c)

add_executable(2022-sum-re sum-re.c)

add_executable(2022-fib fib-re.c)
add_executable(2022-fib-array fib-array.c)
add_executable(2022-fib-iter fib-iter.c)

add_executable(2022-gcd-euclid-re gcd-euclid-re.c)
add_executable(2022-gcd-euclid-iter gcd-euclid-iter.c)
add_executable(2022-gcd-euclidean-iter gcd-euclidean-iter.c)
add_executable(2022-gcd-euclidean-re gcd-euclidean-re.c)

add_executable(2022-bsearch-re bsearch-re.c)

add_executable(2022-mergesort mergesort.c)