#add_subdirectory(intro)
add_executable(list intro/list.c)
#add_subdirectory(timing)
add_executable(time-server timing/time-server.c)
#add_subdirectory(tcp)
add_executable(tcp-client tcp/tcp-client.c)
#add_subdirectory(toupper)
add_executable(toupper-server toupper/toupper-server.c)
add_executable(toupper-client toupper/toupper-client.c)
#add_subdirectory(dns)