add_executable(2022-leap-if-else leap-if-else.c)
add_executable(2022-leap-else-if leap-else-if.c)
add_executable(2022-leap-elseif leap-elseif.c)
add_executable(2022-leap leap.c)

add_executable(2022-min-of-two min-of-two.c)
add_executable(2022-min-of-two-double min-of-two-double.c)
add_executable(2022-min-of-three min-of-three.c)

add_executable(2022-min-array min-array.c)
add_executable(2022-min-array-input min-array-input.c)